# CSJMediaParser

./: .gitignore  CMakeLists.txt  README.md  vs_confif_windows.7z  vs_config_windows.7z  vscode_config_mac.7z  vscode_config_windows.7z
CSJMediaEngine/: CMakeLists.txt
CSJMediaEngine/CSJMediaEngineInfo/: CSJMediaEngineInfo.h
CSJMediaEngine/CSJMediaPlayer/: CSJMdiePlayerBase.cc  CSJMdiePlayerBase.h
CommonTools/: CMakeLists.txt
documents/: CSJParser.pip  CSJVideoParser_dev_points.xlsx  develop_records(Read_before_coding).md  develop_records-Read_before_coding.md  ffprobe读取数据.txt  meidaData.txt  需求分析.txt
resources/DXShaders/: DXPixel_PS.cso  DXPixel_PS.hlsl  DXRGBAShader.hlsl  DXVertexShader.hlsl  DXVertex_VS.cso  DXYUVShader.hlsl  Shader.hlsli
src/: CSJMpegHeader.h  mainwindow.cpp
src/3rdParts/spdlog/: CMakeLists.txt
src/CSJMediaEngine/: CMakeLists.txt  CSJMediaData.h
src/CSJMediaEngine/CSJMediaData/: CSJMediaRawData.cpp
src/CSJMediaEngine/CSJMediaEngineInfo/: CSJMediaEngineInfo.cc
src/CSJMediaEngine/CSJMediaPlayer/: CSJFFPlayerKernel.cpp  CSJFFPlayerKernel.h  CSJFrameWrapper.cc  CSJFrameWrapper.hpp  CSJMediaPlayer.cc  CSJMediaPlayer.hpp  CSJMediaPlayerBase.cc  CSJPacketWrapper.cc  CSJPacketWrapper.hpp
src/CSJMediaEngine/include/: CSJMediaEngineInfo.h  CSJMediaEngine_Export.h  CSJMediaPlayerBase.h  CSJMediaRawData.h  CSJMpegHeader.h  CSJVideoPresentDelegate.h
src/CSJMediaParser/: CMakeLists.txt
src/CSJMediaParser/CSJUIKit/: CSJMediaInfoWidget.cpp  CSJMediaPlayerWindow.cpp  CSJMediaPlayerWindow.h  CSJPlayerControllerWidget.cc  CSJPlayerControllerWidget.h  CSJVideoRendererView.h  CSJVideoRendererWidget.cpp  CSJVideoRendererWidget.h
src/CSJMediaParser/CSJUIModules/: CSJGlassWidget.cc  CSJGlassWidget.h  CSJMediaFunctionEntryArea.cc  CSJMediaFunctionEntryArea.h  CSJMediaSpaceInfoArea.cc  CSJMediaSpaceInfoArea.h  CSJWidget.cpp  CSJWidget.h
src/CSJMediaParser/Controllers/: CSJMediaDetailModule.h  CSJMediaSPFDataController.cpp  CSJMediaSPFDataController.h  CSJPlayerController.cpp  CSJPlayerController.h  CSJRenderDelegateImpl.cpp  CSJRenderDelegateImpl.h
src/CSJMediaParser/Global/: global_constant.h
src/CSJMediaParser/MpegHeaders/: CSJMediaRawData.cpp  CSJMediaRawData.h
src/CSJMediaParser/MpegTool/: CSJMediaData.h  CSJMediaDataManager.h  CSJMpegInteractions.h  CSJMpegTool.cpp  CSJMpegToolWorker.cpp
src/CSJMediaParser/ThemeManager/: CSJThemeManager.h
src/CSJMediaParser/Utils/: CSJPathTool.cc  CSJPathTool.h  CSJResourceIdentifiers.h  CSJStringUtils.h
src/CSJMediaParser/main/: CSJMainWindow.cpp  CSJMainWindow.h  main.cpp  mainwindow.cpp  mainwindow.h
src/CSJMediaParser/player/: CSJFFPlayerKernel.cpp  CSJFFPlayerKernel.h  CSJPlayerController.cpp  CSJPlayerController.h  CSJPlayerKernelBase.h  CSJVideoPresentDelegate.h
src/CSJMediaParser/renderClient/: CSJVideoRenderer.cpp  CSJVideoRenderer.h
src/CSJMediaParser/renderClient/Mac/: CSJMTKRenderer.h  CSJMTKRenderer.mm  CSJMediaShaderTypes.h  CSJMediaShaders.metal  CSJMetalHelper.h  CSJMetalHelper.m  CSJMetalRenderer.h  CSJMetalRenderer.mm  CSJVideoRendererMetalImpl.h  CSJVideoRendererMetalImpl.mm
src/CSJMediaParser/renderClient/Mac/Shaders/: CSJMediaShaderTypes.h
src/CSJMediaParser/renderClient/Win/: CSJVideoRendererDXImpl.cpp  CSJVideoRendererDXImpl.h  DXTrace.cpp
src/CSJRawData/: CSJMediaRawData.cpp  CSJMediaRawData.h
src/CSJRenderEngine/: CMakeLists.txt  CSJRenderEngine_Export.h  CSJVSyncHandler.cc  CSJVSyncHandler.h  CSJVideoRenderer.cpp  CSJVideoRenderer.h
src/CSJRenderEngine/Mac/: CSJMetalRenderer.h  CSJMetalRenderer.mm  CSJVSyncHandlerAppleImpl.h  CSJVSyncHandlerAppleImpl.mm  CSJVideoRendererMetalImpl.h  CSJVideoRendererMetalImpl.mm
src/CSJRenderEngine/Mac/Shaders/: CSJMediaShaders.metal  default.metallib
src/CSJRenderEngine/Win/: CSJDirectXHelper.cc  CSJDirectXHelper.h  CSJVideoRendererDXImpl.cpp  CSJVideoRendererDXImpl.h  d3dUtil.h
src/CSJRenderEngine/Win/Renderables/: CSJRGBARenderable.cc  CSJRGBARenderable.h  CSJRenderableBase.cc  CSJRenderableBase.h  CSJYUVRenderable.cc  CSJYUVRenderable.h
src/CSJUIKit/: CSJAccordionPage.cpp  CSJAccordionPage.h  CSJAccordionWidget.cpp  CSJAccordionWidget.h  CSJDialog.cpp  CSJDialog.h  CSJMediaInfoWidget.h  CSJMediaPlayerWindow.cpp  CSJMediaPlayerWindow.h  CSJPopupWidget.cpp  CSJPopupWidget.h  CSJVideoRendererView.cpp  CSJVideoRendererWidget.cpp  CSJVideoRendererWidget.h  mainwindow.h
src/CSJUtils/: CMakeLists.txt
src/CSJUtils/include/: CSJEffRingQueue.h  CSJLogger.h  CSJMediaData.h  CSJPathTool.h  CSJRingQueue.h  CSJStringUtils.h  CSJUtils_Export.h
src/CSJUtils/src/: CSJLogger.cc  CSJMediaData.cc  CSJPathTool.cc
src/Controllers/: CSJMediaDetailModule.cpp  CSJMediaSPFDataController.cpp  CSJMediaSPFDataController.h
src/MetalShaders/: CSJMetalShader.metal
src/MpegTool/: CSJMediaData.cpp  CSJMediaData.h  CSJMediaDataManager.cpp  CSJMediaDataManager.h  CSJMpegInteractions.cpp  CSJMpegTool.cpp  CSJMpegTool.h  CSJMpegToolWorker.cpp  CSJMpegToolWorker.h
src/Utils/: CSJLockUtils.cpp  CSJLockUtils.h  CSJLogger.cc  CSJLogger.h  CSJPathTool.h  CSJResourceManager.cc  CSJResourceManager.h  CSJStringUtils.cc  CSJStringUtils.h
src/main/: main.cpp
src/player/: CSJFFPlayerKernel.cpp  CSJFFPlayerKernel.h  CSJPlayerController.cpp  CSJPlayerController.h  CSJPlayerKernelBase.cpp  CSJPlayerKernelBase.h  CSJVideoPresentDelegate.h
src/renderClient/: CSJVideoRenderer.cpp  CSJVideoRenderer.h  CSJVideoRendererView.cpp  CSJVideoRendererView.h  CSJVideoRendererWidget.cpp  CSJVideoRendererWidget.h
src/renderClient/Mac/: CSJMTKRenderer.mm  CSJMediaShaderTypes.h  CSJMediaShaders.metal  CSJVideoRendererMetalImpl.h  CSJVideoRendererMetalImpl.mm
src/renderClient/Win/: CSJVideoRendererDXImpl.cpp  CSJVideoRendererDXImpl.h  DXTrace.h  d3dUtil.cpp
thirdParts/Mac/ffmpeg/include/: config.h  config_components.h
thirdParts/Mac/ffmpeg/include/libavutil/: ffversion.h
thirdParts/Win/ffmpeg/include/: config.h
thirdParts/Win/ffmpeg/libs/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  swresample.lib  swscale.lib
(+4 files in other folders)
